[254] add releng and setup hudson jobs
https://polarsys.org/bugs/show_bug.cgi?id=254

Change-Id: I33d922fa08aeeb13304aabbc9b8c99a2fcfbc641
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>