@@ -76,11 +76,17 @@ This file was generated by Eclipse EGF
     <condition property="capella.repo.url" value="${env.capella.repo.url}">
         <isset property="env.capella.repo.url" />
     </condition>
+    <condition property="capella.egf.repo.url" value="${env.capella.egf.repo.url}">
+        <isset property="env.capella.egf.repo.url" />
+    </condition>
     <condition property="eclipse_version" value="${env.eclipse_version}">
         <isset property="env.eclipse_version" />
     </condition>
     <condition property="studio_version" value="${env.studio_version}">
         <isset property="env.studio_version" />
+    </condition>
+    <condition property="main_version" value="${env.main_version}">
+        <isset property="env.main_version" />
     </condition>
 
     <property file="build.properties" />
@@ -140,8 +146,10 @@ This file was generated by Eclipse EGF
 	                <jvmarg value="-Dquery.legacy.repo.url=${query.legacy.repo.url}"/>
 	                <jvmarg value="-Dkitalpha.repo.url=${kitalpha.repo.url}"/>
 	                <jvmarg value="-Dcapella.repo.url=${capella.repo.url}"/>
+	                <jvmarg value="-Dcapella.egf.repo.url=${capella.egf.repo.url}"/>
 	                <jvmarg value="-Declipse_version=${eclipse_version}"/>
 	                <jvmarg value="-Dstudio_version=${studio_version}"/>
+	                <jvmarg value="-Dmain_version=${main_version}"/>
                     <arg value="-data" />
                     <arg value="@{workspace}" />
                 <args />
@@ -328,8 +336,10 @@ This file was generated by Eclipse EGF
 		<echo message="Provided $${query.legacy.repo.url} : ${query.legacy.repo.url}" />
 		<echo message="Provided $${kitalpha.repo.url} : ${kitalpha.repo.url}" />
 		<echo message="Provided $${capella.repo.url} : ${capella.repo.url}" />
+		<echo message="Provided $${capella.egf.repo.url} : ${capella.egf.repo.url}" />
 		<echo message="Provided $${eclipse_version} : ${eclipse_version}" />
 		<echo message="Provided $${studio_version} : ${studio_version}" />
+		<echo message="Provided $${main_version} : ${main_version}" />
 	</target>
 
     <target name="init.build.properties">
@@ -352,16 +362,109 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,TP_juno,TP_build,TP_win32-win32-x86" />
+	<target name="all" depends="CleanStep_1,TP_juno,TP_build,releng,PublishStep_5,all_studio_features,TP_win32-win32-x86,AntStep_8" />
 	<target name="TP_juno" depends="TP_juno_build_studio_platform" />
-	<target name="TP_juno_build_studio_platform" depends="TP_juno_build_studio_platform_setup_platform,TP_juno_build_studio_platform_install_query_legacy_features,TP_juno_build_studio_platform_install_kitalpha_features,TP_juno_build_studio_platform_install_capella_features" />
+	<target name="TP_juno_build_studio_platform" depends="TP_juno_build_studio_platform_setup_platform,TP_juno_build_studio_platform_install_query_legacy_features,TP_juno_build_studio_platform_install_kitalpha_features,TP_juno_build_studio_platform_install_capella_features,TP_juno_build_studio_platform_install_capella_egf_features" />
 	<target name="TP_juno_build_studio_platform_setup_platform" depends="TP_juno_build_studio_platform_setup_platform_TP_juno,TP_juno_build_studio_platform_setup_platform_install_cots_features,TP_juno_build_studio_platform_setup_platform_install_diffmerge,TP_juno_build_studio_platform_setup_platform_install_ecoretools2" />
 	<target name="TP_build" depends="TP_build_TP_build,TP_build_install_egf_TP_build" />
-	<target name="TP_win32-win32-x86" depends="TP_win32-win32-x86_build_studio_platform,TP_win32-win32-x86_zip_juno_results" />
-	<target name="TP_win32-win32-x86_build_studio_platform" depends="TP_win32-win32-x86_build_studio_platform_setup_platform,TP_win32-win32-x86_build_studio_platform_install_query_legacy_features,TP_win32-win32-x86_build_studio_platform_install_kitalpha_features,TP_win32-win32-x86_build_studio_platform_install_capella_features" />
+	<target name="TP_win32-win32-x86" depends="TP_win32-win32-x86_build_studio_platform,TP_win32-win32-x86_install_studio,TP_win32-win32-x86_zip_juno_results" />
+	<target name="TP_win32-win32-x86_build_studio_platform" depends="TP_win32-win32-x86_build_studio_platform_setup_platform,TP_win32-win32-x86_build_studio_platform_install_query_legacy_features,TP_win32-win32-x86_build_studio_platform_install_kitalpha_features,TP_win32-win32-x86_build_studio_platform_install_capella_features,TP_win32-win32-x86_build_studio_platform_install_capella_egf_features" />
 	<target name="TP_win32-win32-x86_build_studio_platform_setup_platform" depends="TP_win32-win32-x86_build_studio_platform_setup_platform_TP_win32-win32-x86,TP_win32-win32-x86_build_studio_platform_setup_platform_install_cots_features,TP_win32-win32-x86_build_studio_platform_setup_platform_install_diffmerge,TP_win32-win32-x86_build_studio_platform_setup_platform_install_ecoretools2" />
 	<target name="CleanStep_1" >
 		<antcall target="clean.result" />
+	</target>
+    <target name="releng" depends="init,install.buckminster">
+        <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
+
+		<echo message="install JRE ${env.JAVA_HOME}" />
+    	<buckminster command="installJRE">
+            <cmdargs>
+                <arg value="--location" />
+                <arg value="${env.JAVA_HOME}" />
+            </cmdargs>
+        </buckminster>
+
+
+		<echo message="import target platform" />
+        <buckminster command="importtargetdefinition">
+            <cmdargs>
+                <arg value="--active" />
+                <arg value="${relengDir}/buckminster_releng/build.target" />
+            </cmdargs>
+        </buckminster>
+		<echo message="provision : import projects in workspace" />
+        <buckminster command="import">
+            <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
+            <cmdargs>
+                <arg value="${relengDir}/buckminster_releng/build.mspec" />
+            </cmdargs>
+        </buckminster>
+
+
+        <echo message="Invoking all eclipse builders on workspace ${workspace}" />
+        <buckminster command="build" >
+            <cmdargs>
+                <arg value="--clean" />
+                <arg value="--thorough" />
+            </cmdargs>
+		</buckminster>
+    </target>
+
+	<target name="PublishStep_5" depends="init,install.buckminster" >
+
+		
+		<echo message="Generate Site"/>
+		<buckminster command="perform">
+			<globargs>
+				<arg value="-Dsite.include.top=true"/>
+				<arg value="-Dsite.signing=false"/>				
+				<arg value="-Dcbi.include.source=true"/>				
+			</globargs>
+			<cmdargs>
+				<arg value="org.polarsys.capella.studio.releng.feature:eclipse.feature#site.p2" />
+			</cmdargs>
+		</buckminster>
+
+		<echo message="Publish site"/>
+		<mkdir dir="${publish}/org.polarsys.capella.studio.releng.feature/site.p2/"/>
+		<copy todir="${publish}/org.polarsys.capella.studio.releng.feature/site.p2/">
+			<fileset dir="${result}/output">
+				<include name="org.polarsys.capella.studio.releng.feature*/site.p2/*"/>
+				<include name="org.polarsys.capella.studio.releng.feature*/site.p2/**"/>
+			</fileset>
+			<filtermapper>
+				<replaceregex pattern=".*site\.p2" replace="" />
+			</filtermapper>
+		</copy>
+		
+	</target>
+
+
+	<target name="AntStep_8">
+		<antcall target="cleanUp"/>
+	</target>
+
+<target name="cleanUp">
+    <delete dir="${publish}/org.polarsys.capella*"/>
+</target>
+
+
+	<target name="all_studio_features" depends="init,install.egf" >
+		<anteclipse target="all_studio_features_dropins" />
+		<anteclipse target="all_studio_features_sitep2" />
+	</target>	
+
+	<target name="all_studio_features_dropins">
+	</target>	
+
+	<target name="all_studio_features_sitep2">
+		<!-- see http://wiki.eclipse.org/Equinox/p2/Ant_Tasks -->
+		<p2.mirror>
+			<repository location="file:/${publish}/studio/site.p2" name="Capella_Studio/studio" />
+			<source>
+				<repository location="file:/${publish}/org.polarsys.capella.studio.releng.feature/site.p2" />
+			</source>
+		</p2.mirror>
 	</target>
 	<target name="TP_juno_build_studio_platform_setup_platform_TP_juno" depends="init,install.director" >
         <eclipse.launch app="director">
@@ -803,6 +906,44 @@ This file was generated by Eclipse EGF
                 <arg value="org.polarsys.capella.detachment.version.precondition.feature.feature.group" />
                 <arg value="-i" />
                 <arg value="org.polarsys.capella.detachment.version.precondition.source.feature.feature.group" />                
+
+
+
+                <arg value="-p2.os" />
+                <arg value="win32" />
+                <arg value="-p2.ws" />
+                <arg value="win32" />
+                <arg value="-p2.arch" />
+                <arg value="x86" />
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="TP_juno_build_studio_platform_install_capella_egf_features" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_juno" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${capella.egf.repo.url}" />
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.core.egf.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.core.egf.source.feature.feature.group" />                
 
 
 
@@ -1328,6 +1469,76 @@ This file was generated by Eclipse EGF
                 <arg value="win32" />
                 <arg value="-p2.arch" />
                 <arg value="x86" />
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="TP_win32-win32-x86_build_studio_platform_install_capella_egf_features" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_win32-win32-x86" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${capella.egf.repo.url}" />
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.core.egf.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.core.egf.source.feature.feature.group" />                
+
+
+
+                <arg value="-p2.os" />
+                <arg value="win32" />
+                <arg value="-p2.ws" />
+                <arg value="win32" />
+                <arg value="-p2.arch" />
+                <arg value="x86" />
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="TP_win32-win32-x86_install_studio" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_win32-win32-x86" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.capella.studio.releng.feature/site.p2" />
+                
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.studio.releng.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.studio.releng.source.feature.feature.group" />
+
             </args>
         </eclipse.launch>
 	</target>	
